update openapi.json and other Controllers and Services
